# rwa_calculator

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .sonarcloud.properties  404.html  AGENTS.md  CLAUDE.md  CUsersphilmPycharmProjectsrepo-branch-benchmark.gitignore  DOCS_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  LICENSE  PLAN.md  PROMPT_build.md  PROMPT_build_next.md  PROMPT_ccr.md  PROMPT_docs_build.md  PROMPT_docs_plan.md  PROMPT_plan.md  README.md  index.html  loop.sh  mkdocs.yml  objects.inv  plan.md  pyproject.toml  sonar-project.properties  zensical.toml
.claude/: settings.json  settings.local.json
.claude/agents/: doc-writer.md  engine-implementer.md  fixture-builder.md  plan-curator.md  reviewer.md  scenario-architect.md  test-writer.md
.claude/commands/: implement-scenario.md  next-doc.md  next-docs.md  next-items.md  next-scenario.md  refresh-docs-plan.md  refresh-plan.md  sonar-clean.md
.claude/state/: .gitkeep
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
api/configuration/: index.html
api/contracts/: index.html
api/domain/: index.html
api/engine/: index.html
api/pipeline/: index.html
api/reporting/: index.html
api/service/: index.html
appendix/: index.html
appendix/changelog/: index.html
appendix/glossary/: index.html
appendix/regulatory-references/: index.html
architecture/: index.html
architecture/components/: index.html
architecture/data-flow/: index.html
architecture/design-principles/: index.html
architecture/pipeline/: index.html
architecture/pipeline-collect-barriers/: index.html
basel31/: SKILL.md
basel31/references/: crm-changes.md  irb-changes.md  what-changed.md
crr/: SKILL.md
crr/references/: credit-conversion-factors.md  credit-risk-mitigation.md  exposure-classification.md  provisions-and-el.md  sa-risk-weights.md  slotting-and-equity.md  supporting-factors.md
data-model/: index.html
data-model/data-validation/: index.html
data-model/input-schemas/: index.html
data-model/intermediate-schemas/: index.html
data-model/output-schemas/: index.html
data-model/regulatory-tables/: index.html
development/: index.html
development/bdd/: index.html
development/benchmarks/: index.html
development/code-style/: index.html
development/documentation-conventions/: index.html
development/extending/: index.html
development/testing/: index.html
development/workbooks/: index.html
docs/: index.md  overview.md
docs/api/: configuration.md  contracts.md  domain.md  engine.md  index.md  pipeline.md  reporting.md  service.md
docs/appendix/: changelog.md  glossary.md  index.md  regulatory-references.md
docs/architecture/: components.md  data-flow.md  design-principles.md  index.md  pipeline-collect-barriers.md  pipeline.md
docs/blog/: 2026-04-28-building-a-uk-basel-31-rwa-calculator-in-public.md  2026-05-05-the-pipeline.md  2026-05-12-risk-weights-are-not-a-lookup-table.md  2026-05-12-the-pipeline.md  2026-05-19-building-with-an-agent-swarm.md  2026-05-26-risk-weights-are-not-a-lookup-table.md  2026-05-26-the-output-floor-and-why-basel-31-bites.md  2026-06-02-crm-mofs-and-other-edge-case-archaeology.md  2026-06-09-building-with-an-agent-swarm.md  2026-06-09-testing-a-regulatory-engine.md  2026-06-16-what-i-got-wrong-whats-next.md  2026-06-20-counterparty-credit-risk-sa-ccr.md  2026-06-23-making-regulation-data-not-code.md  2026-06-23-the-output-floor-and-why-basel-31-bites.md  2026-06-25-from-workbench-to-web-app.md  2026-06-27-the-swarm-six-weeks-on.md  2026-07-07-crm-mofs-and-other-edge-case-archaeology.md  2026-07-21-testing-a-regulatory-engine.md  2026-08-04-what-i-got-wrong-whats-next.md  2026-08-18-counterparty-credit-risk-sa-ccr.md  2026-09-01-making-regulation-data-not-code.md  2026-09-15-from-workbench-to-web-app.md  2026-09-29-the-swarm-two-months-on.md  index.md
docs/data-model/: data-validation.md  index.md  input-schemas.md  intermediate-schemas.md  output-schemas.md  regulatory-tables.md
docs/development/: bdd.md  benchmarks.md  citation-matrix.md  citation-tracking.md  code-style.md  documentation-conventions.md  extending.md  index.md  module-dependencies.md  (+3 more)
features/: index.html
getting-started/: index.html
overrides/: main.html
plans/: index.html
scripts/: README.md  _deploy_changelog.py  _validate.py  arch_check.py  arch_metrics.json  blog_counts.py  deploy.py  diagnose_rwa_nonfinite.py  download_docs.py  dump_hierarchy_exit_schema.py  generate_citation_matrix.py  generate_dependency_graph.py  parity_gate.py  phase2_parity.py  post_edit_ruff.sh  pre_commit_gate.sh  profile_memory.py  render_stream.py  worktree.py
search/: search_index.json
specifications/: index.html
specs/: architecture.md  configuration.md  glossary.md  index.md  interfaces.md  milestones.md  nfr.md  output-reporting.md  overview.md  regulatory-compliance.md
user-guide/: index.html
(+1588 files in other folders)
