[project]
name = "rwa-calc"
version = "0.1.66"
description = "Basel 3.1 Credit Risk RWA Calculator compliant with PRA PS9/24"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "OpenAfterHours"}
]
maintainers = [
    {name = "OpenAfterHours"}
]
keywords = ["basel", "rwa", "credit-risk", "pra", "regulatory", "capital", "banking", "risk-management", "polars"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.0.0",
    "polars-normal-stats>=0.2.0",  # Required for IRB statistical functions
    "fastexcel>=0.19.0",
    "xlsxwriter>=3.1.0",
    "zensical>=0.0.30",
    "fastapi>=0.135.3",
    "itsdangerous>=2.2.0",
    "uvicorn>=0.40.0",
    "marimo>=0.19.6",
    "ty>=0.0.26",
]

[project.scripts]
rwa-calc-ui = "rwa_calc.ui.marimo.server:main"

[project.urls]
Homepage = "https://github.com/OpenAfterHours/rwa_calculator"
Documentation = "https://OpenAfterHours.github.io/rwa_calculator/"
Repository = "https://github.com/OpenAfterHours/rwa_calculator.git"
Issues = "https://github.com/OpenAfterHours/rwa_calculator/issues"
Changelog = "https://github.com/OpenAfterHours/rwa_calculator/blob/master/docs/appendix/changelog.md"

[project.optional-dependencies]
ui = [
    "marimo>=0.5.0",
    "uvicorn>=0.27.0",
    "fastapi>=0.115.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.3.0",
    "ty",
    "zensical>=0.0.29",
    "mkdocstrings[python]>=0.24.0",
    "numpy>=1.26.0",  # For benchmark data generation only
]
all = [
    "rwa-calc[ui,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rwa_calc"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]
exclude = ["workbooks"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "G",      # flake8-logging-format — forbid f-strings / % inside log calls
    "LOG",    # flake8-logging — catches deprecated/misused logging APIs
    "T20",    # flake8-print — ban print() outside allowed files
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "G"]                  # test debugging prints / f-string logs are OK
"src/rwa_calc/ui/marimo/apps/**" = ["T20"] # marimo workbooks use print for cell output
"scripts/**" = ["T20", "G"]                # CLI scripts print user-facing output

[tool.ruff.lint.isort]
known-first-party = ["rwa_calc"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --benchmark-disable -m 'not slow'"
markers = [
    "benchmark: mark test as a benchmark (deselect with --benchmark-skip)",
    "slow: mark test as slow (10M+ scale, may take several minutes)",
]

[tool.coverage.run]
source = ["src/rwa_calc"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
# Marimo UI module excluded from type checking (equivalent to mypy ignore_errors)
exclude = [
    "src/rwa_calc/ui/marimo/",
    "workbooks",
    "tests/fixtures/generate_all.py",
    "tests/fixtures/*/generate_all.py",
]

[tool.ty.rules]
# Polars custom namespaces (register_lazyframe_namespace) produce false positives
# ty cannot resolve.
unresolved-attribute = "ignore"   # Polars namespaces (.rwa_sa, .irb, etc.) + union narrowing
invalid-argument-type = "ignore"  # Polars type[DataType] vs DataType
invalid-assignment = "ignore"     # Polars ChainedThen vs Then in when/then chains
invalid-parameter-default = "ignore"  # Polars pl.String as DataType default
no-matching-overload = "ignore"   # dict.fromkeys with Polars DataType values
not-subscriptable = "ignore"      # LazyFrame.collect() returns DataFrame|InProcessQuery

[dependency-groups]
dev = [
    "zensical>=0.0.29",
    "mkdocstrings[python]>=1.0.0",
    "pytest-benchmark>=5.2.3",
    "numpy>=1.26.0",  # For benchmark data generation only
    "pymupdf>=1.27.2.2",
    "ruff>=0.14.14",
]
